# dconv

./: .gitignore  CONTRIBUTING.md  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
docx2pdf_cli/: cli.py  main.py  utils.py
docx2pdf_cli/converter/: to_docx.py  to_pdf.py
